--- a/static/projects/projects.json
+++ b/static/projects/projects.json
@@ -34,7 +34,7 @@
         "R", "bayesian", "regression"
       ],
       "photos": [
-        "/static/projects/global-warming/image1.png"
+        "/static/projects/global-warming/image1.jpg"
       ],
       "github": "https://github.com/rlavelle/global-warming",
       "paper": "/global"
