--- a/static/projects/projects.json
+++ b/static/projects/projects.json
@@ -21,7 +21,7 @@
         "python", "nlp", "deep learning"
       ],
       "photos": [
-        "/static/projects/abusive-language/image1.jpg"
+        "/static/projects/abusive-language/image1.png"
       ],
       "github": "https://github.com/rlavelle/abusive-language-detection",
       "paper": "/abusive"
