--- a/static/projects/projects.json
+++ b/static/projects/projects.json
@@ -8,7 +8,7 @@
         "python", "econometrics"
       ],
       "photos": [
-        "/static/projects/stock-forecasting/image1.jpg"
+        "/static/projects/stock-forecasting/image1.png"
       ],
       "github": "https://github.com/rlavelle/stock-forecasting",
       "paper": "/stock"
